# EDS-Req-New

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CEDSfix_view_output.txt  README.md  agent_config.yaml  bid_investigation.txt  bid_investigation2.txt  check_budget_year.py  check_tables.py  check_vendor_cols.py  config.yaml  dashboard.py  diag_output.txt  diagnose.bat  diagnose_req25.py  diagnose_view.py  docker-compose.yml  eds_agent.spec  explore_fast.py  explore_mappings.py  explore_req_views.py  explore_schema_for_export.py  find_bid_tables.py  find_niskayuna_current.py  find_niskayuna_downloaded.py  fix_bid_assignment_output.txt  fix_view2.py  fix_view_revert.py  gather_accounting_data.py  generate_accounting_docs.py  generate_berkeley_savings.py  generate_nasco_combined_excel.py  generate_scarsdale_export.py  get_schema.py  import React, { useState } from 'react';.js  investigate_final.py  investigate_req1388_v2.py  investigate_req1388_v3.py  (+13 more)
.claude/: launch.json  settings.local.json
.claude-plugin/: plugin.json
.claude-plugin/agents/: eds-dba.md
.claude-plugin/commands/: ask.md  docs.md  report-preview.md  report.md  run.md  schema.md  sql.md  status.md
.claude-plugin/hooks/: hooks.json  prompt-hint.py  report-notify.py  session-context.py  validate-sql.py
.claude-plugin/mcp-servers/: eds_dba_server.py  eds_reports_server.py
.github/workflows/: deploy.yml  test.yml
.serena/: project.yml
SQL-Server Conect/: connect.py  extract_trigger_and_query.py  performance_analysis.py
SQL-Server Conect/.claude/: settings.local.json
SQL-Server Conect/docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  EDS_ACCESS_CONTROL.md  EDS_ARCHIVE_ANALYSIS.md  EDS_INDEXES.md  (+14 more)
agent/: CLAUDE.md  Dockerfile  __init__.py  __main__.py  config.py  main.py
api/: README.md  __init__.py  cache.py  database.py  main.py  middleware.py  models.py  search.py
config/: dev.env  prod.env.example
docker/: Dockerfile.api  Dockerfile.frontend  nginx.conf
docs/: AGENT_CLI.md  AGENT_TECHNICAL_REFERENCE.md  API_REFERENCE.md  API_ROUTES.md  ARCHITECTURE.md  AZURE_INFRASTRUCTURE.md  CI_CD.md  CONFIGURATION.md  DATABASE_INVENTORY.md  DEPLOYMENT.md  DEVELOPMENT.md  EDS_BUSINESS_DOMAINS.md  EDS_CIRCULAR_DEPS.md  EDS_DATA_DICTIONARY.md  EDS_DATA_DICTIONARY.xlsx  EDS_DATA_OWNERSHIP.md  EDS_ERD.md  EDS_EXTENDED_PROPERTIES.sql  EDS_PROCEDURE_DEPENDENCIES.md  EDS_RECURSIVE_PROCEDURES.md  EDS_ROOT_PROCEDURES.md  EDS_STATUS_CODES.md  EDS_SUMMARY.md  EDS_TRIGGERS.md  EDS_VIEWS.md  EDS_VIEWS_GUIDE.md  ELASTICSEARCH_INFRASTRUCTURE.md  FRONTEND_ARCHITECTURE.md  FRONTEND_TROUBLESHOOTING.md  INFRASTRUCTURE_AUDIT_2026-03-27.md  MONITORING_SCRIPTS_REFERENCE.md  README.md  SCHEMA.md  TESTING_REFERENCE.md  UNIVERSAL_REQUISITION.md  demo-script.md  frontend-comparison-walkthrough.md  kubernetes-clusters.md  teams-cheat-sheet.txt
frontend/: FIELD_NAMING_MAP.md  agent.html  checkout.html  index.html  login.html  product-detail.html
output/: Nasco_0518_Complete_Items_Report_Dec2024_Nov2025.xlsx  Nasco_0518_Items_by_Bid_Dec2024_Nov2025.xlsx  Nasco_0518_PO_by_Category_and_Bid_Dec2024_Nov2025.xlsx  PERFORMANCE_RECOMMENDATIONS.md  accounting_deep_data.json  bid_final.txt  bid_tables.txt  catalog_link.txt  districts_report.py  fix_output.txt  fix_view_output.txt  rollback_output.txt  trigger_output.txt  universal-requisition.html
scripts/: README.md  add_column_descriptions.py  add_column_descriptions_final.py  add_column_descriptions_v2.py  add_column_descriptions_v3.py  add_column_descriptions_v4.py  alert_dashboard.sql  analyze_archive_schema.py  analyze_business_domains.py  analyze_circular_deps.py  analyze_performance_issues.py  analyze_root_procedures.py  analyze_undocumented_columns.py  capture_performance_baseline.py  check_coverage.py  colton_pierrepont_items_report.py  config.py  db_utils.py  deploy.sh  deploy_indexes_production.py  deploy_indexes_test.py  dev-setup.sh  document_archive_schema.py  document_final_columns.py  document_indexes.py  document_recursive_procs.py  document_remaining_columns.py  document_sp_parameters.py  document_stored_procedures.py  document_view_columns.py  document_views.py  enable_snapshot_isolation.sql  export_to_excel.py  extract_missing_indexes.py  generate_alert_dashboard.py  generate_data_dictionary.py  generate_docx.py  generate_erd.py  generate_extended_properties.py  generate_final_performance_report.py  (+23 more)
tests/: __init__.py  conftest.py  test_config.py  test_db_utils.py  test_deploy_indexes.py  test_investigate_blocking.py  test_recursive_procedures.py
(+321 files in other folders)
